--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     <img src="images/8.jpg?v=2" class="floating-img img8">
 
     <div class="card">
-      <div class="title">Thư gửi bé Thỏ 🐰</div>
-      <button onclick="showMessage()">💌 Bấm đây để đọc nhaa</button>
+      <div class="title">Thư gửi em bé iu dấu của anhhh 🐰</div>
+      <button onclick="showMessage()">💌 Bấm đây nèee</button>
       <br>
       <button id="musicBtn" onclick="toggleMusic()">▶️ Phát nhạc</button>
       <button id="muteBtn" onclick="toggleMute()">🔊 Tắt tiếng</button>
@@ -178,64 +178,81 @@
   </audio>
 
   <script>
-    let typing = false;
-    const text = "Gửi tới cục cưng của anh, trong lúc anh từ nhà em về nhà anh thì em có thể đọc hết thư online này của anh dành cho em đoá. Anh cũng không tin là ban đầu mình chỉ nói chuyện về một tựa game nào đó thôi mà từ đó mình chuyển sang nhiều chuyện khác và chỉ vỏn vẹn 4 ngày mà mình đã quen nhau thành người yêu của nhau, cũng không tin là mình lại có nhiều điểm giống nhau đến mức phải gọi là giống tới 99,9999% =))). Nói ra có thể là khó tin nhưng mà tình cảm của anh dành cho em là thật và nghiêm túc không phải là đùa giỡn hay gì cả, trong khoảng thời gian đó mình cũng có nói chuyện và cũng tìm hiểu về nhau, từ những cái nhỏ nhất cho tới cả ưu điểm và cả khuyết điểm của nhau, nhưng sau khi quen em rồi thì anh lại muốn hiểu em nhiều hơn nữa để có thể là người đồng hành cùng em, ở bên cạnh em mọi lúc, che chở, bảo vệ em, là người sẽ vì em làm tất cả dù cho có trải qua bao nhiêu giông tố, khó khăn thì anh vẫn sẽ ở đây, ở bên em không rời xa. Không thể ngờ được rằng lần đầu tiên anh tìm được một người có thể gần như là hiểu hết về anh chỉ trong vài ngày tìm hiểu, hiểu luôn cả cảm xúc của anh dù anh đã nói giảm nói tránh đi một ít rồi nhưng mà vẫn không thể nào giấu được. Anh cứ nghĩ vì tính cách và nhiều thói xấu này của anh thì sẽ không ai chịu được nhưng em thì khác, em lại lựa chọn ở bên cạnh anh và yêu anh theo cách của riêng em, chỉ cần một cái nhắn tin em cũng biết cảm xúc của anh lúc đó là thế nào mà an ủi, vỗ về anh. Cả trong công việc dù có làm nhiều hay áp lực tới đâu thì cũng có em luôn là người động viên, là người tạo động lực cho anh để anh có thể tiếp tục làm. Em chính là người đã làm cho anh phải thay đổi từ một người tiêu cực, ít tiếp xúc và cũng hay dễ nổi nóng thành một người hoàn toàn khác, tích cực hơn, cười nhiều hơn, cảm thấy cuộc sống này ý nghĩa hơn khi có em bên cạnh. Để bù đắp lại những gì em làm cho anh thì cũng muốn được một ngày nào đó nếu em đồng ý thì anh muốn nghe những gì em đã trải qua từ chuyện vui, buồn anh đều muốn nghe hết để có thể hiểu được em nhiều hơn, có thể chịu nhiều phần gánh nặng của em, dù có chuyện gì đi nữa thì em cũng phải hứa với anh là chia sẻ với anh vì lúc nào cũng có anh ở bên cạnh em, em sẽ không còn chịu đựng một mình hay giữ trong lòng nữa. Anh cũng không muốn em bị cuốn vào những suy nghĩ tiêu cực, những điều gì đó trong cuộc sống lẫn công việc làm ảnh hưởng tới em, anh không bóc phét nhưng anh phải nói thật dù chưa gặp em nhưng nhìn trong ảnh em cười tươi vậy, xinh đến vậy cơ mà, nên anh cũng nhấn mạnh về điều em đang lo sợ nhất khi phải bước vào mối quan hệ đó là đừng quá lo lắng hay cảm thấy áp lực vì em chính là em, là người mà anh yêu thương, ngoại hình không quan trọng với anh, dù em có ra sao đi nữa thì em vẫn là người mà anh yêu, anh muốn cưng chiều, toàn tâm toàn ý với em. Chính ông trời đã cho mình gặp nhau thì tất nhiên đó là cái duyên rồi không thể nào chối cãi được, chính vì vậy mà anh đã có cho mình một quyết định mà không ai dám đặt cược đó là anh sẽ dành cả phần đời còn lại này chỉ để yêu thương em, all in hết vào em thôi nên em hãy tin tưởng anh nhé, lời nói có thể không chứng minh được bao nhiêu nhưng hành động thì anh có thể chứng minh cho em thấy được là anh nói thật hay chỉ là nói xuông. Có chuyện gì đi nữa anh vẫn luôn ở bên cạnh em một bước anh cũng không rời đi, anh đã không biết từ lúc nào anh yêu thương em nhiều đến mức gọi là quá nhiều nhiều luôn, hình bóng em luôn lắp đầy trong tâm trí anh nên nếu thiếu vắng bóng em có thể là anh sẽ không chịu nổi dù chỉ là 1 ngày. Anh sẽ mang đến cho em những gì điều tốt đẹp nhất, sự dịu dàng nhất cho em nên là cười nhiều lên em nhé, anh chỉ muốn thấy em lúc nào cũng cười tươi như vậy là anh đã thấy hạnh phúc lắm rồi. LỜI CUỐI nèeee, cảm ơn em vì đã bước vào cuộc đời anh và cũng cảm ơn em vì đã chọn yêu thương anh, anh mong mối tình này của chúng mình sẽ kéo dài cả triệu năm về sau, cùng nhau có những kỉ niệm đẹp, những tấm ảnh chụp chung cũng sẽ ngày càng nhiều hơn tràn đầy dung lượng điện thoại. Anh không muốn một phút giây nào xa em, anh cần em nhiều hơn những gì anh đã nói, những giây phút bên em anh sẽ trân trọng nó và đó là những kỉ niệm đẹp mà anh không muốn phải quên và cả em nữa. Anh yêu em rất rất rất rất rất là nhiềuuuuuuu lắm bà xã iu dấu của anhhhh oii. Đây là tất cả những gì anh muốn nói với em chắc chắn sẽ không bằng được lá thư mà em gửi tặng anh òi nhưng đây là toàn bộ những gì anh muốn nói và cần nói cho em biết. MÃI YÊU EM, CHỈ YÊU MỘT MÌNH EM THÔI ❤️";
-    const msg = document.getElementById("message");
+  let typing = false;
+  const text = "Gửi tới cục cưng của anh, trong lúc anh từ nhà em về nhà anh thì em có thể đọc hết thư online này của anh dành cho em đoá. Anh cũng không tin là ban đầu mình chỉ nói chuyện về một tựa game nào đó thôi mà từ đó mình chuyển sang nhiều chuyện khác và chỉ vỏn vẹn 4 ngày mà mình đã quen nhau thành người yêu của nhau, cũng không tin là mình lại có nhiều điểm giống nhau đến mức phải gọi là giống tới 99,9999% =))). Nói ra có thể là khó tin nhưng mà tình cảm của anh dành cho em là thật và nghiêm túc không phải là đùa giỡn hay gì cả, trong khoảng thời gian đó mình cũng có nói chuyện và cũng tìm hiểu về nhau, từ những cái nhỏ nhất cho tới cả ưu điểm và cả khuyết điểm của nhau, nhưng sau khi quen em rồi thì anh lại muốn hiểu em nhiều hơn nữa để có thể là người đồng hành cùng em, ở bên cạnh em mọi lúc, che chở, bảo vệ em, là người sẽ vì em làm tất cả dù cho có trải qua bao nhiêu giông tố, khó khăn thì anh vẫn sẽ ở đây, ở bên em không rời xa. Không thể ngờ được rằng lần đầu tiên anh tìm được một người có thể gần như là hiểu hết về anh chỉ trong vài ngày tìm hiểu, hiểu luôn cả cảm xúc của anh dù anh đã nói giảm nói tránh đi một ít rồi nhưng mà vẫn không thể nào giấu được. Anh cứ nghĩ vì tính cách và nhiều thói xấu này của anh thì sẽ không ai chịu được nhưng em thì khác, em lại lựa chọn ở bên cạnh anh và yêu anh theo cách của riêng em, chỉ cần một cái nhắn tin em cũng biết cảm xúc của anh lúc đó là thế nào mà an ủi, vỗ về anh. Cả trong công việc dù có làm nhiều hay áp lực tới đâu thì cũng có em luôn là người động viên, là người tạo động lực cho anh để anh có thể tiếp tục làm. Em chính là người đã làm cho anh phải thay đổi từ một người tiêu cực, ít tiếp xúc và cũng hay dễ nổi nóng thành một người hoàn toàn khác, tích cực hơn, cười nhiều hơn, cảm thấy cuộc sống này ý nghĩa hơn khi có em bên cạnh. Để bù đắp lại những gì em làm cho anh thì cũng muốn được một ngày nào đó nếu em đồng ý thì anh muốn nghe những gì em đã trải qua từ chuyện vui, buồn anh đều muốn nghe hết để có thể hiểu được em nhiều hơn, có thể chịu nhiều phần gánh nặng của em, dù có chuyện gì đi nữa thì em cũng phải hứa với anh là chia sẻ với anh vì lúc nào cũng có anh ở bên cạnh em, em sẽ không còn chịu đựng một mình hay giữ trong lòng nữa. Anh cũng không muốn em bị cuốn vào những suy nghĩ tiêu cực, những điều gì đó trong cuộc sống lẫn công việc làm ảnh hưởng tới em, anh không bóc phét nhưng anh phải nói thật dù chưa gặp em nhưng nhìn trong ảnh em cười tươi vậy, xinh đến vậy cơ mà, nên anh cũng nhấn mạnh về điều em đang lo sợ nhất khi phải bước vào mối quan hệ đó là đừng quá lo lắng hay cảm thấy áp lực vì em chính là em, là người mà anh yêu thương, ngoại hình không quan trọng với anh, dù em có ra sao đi nữa thì em vẫn là người mà anh yêu, anh muốn cưng chiều, toàn tâm toàn ý với em. Chính ông trời đã cho mình gặp nhau thì tất nhiên đó là cái duyên rồi không thể nào chối cãi được, chính vì vậy mà anh đã có cho mình một quyết định mà không ai dám đặt cược đó là anh sẽ dành cả phần đời còn lại này chỉ để yêu thương em, all in hết vào em thôi nên em hãy tin tưởng anh nhé, lời nói có thể không chứng minh được bao nhiêu nhưng hành động thì anh có thể chứng minh cho em thấy được là anh nói thật hay chỉ là nói xuông. Có chuyện gì đi nữa anh vẫn luôn ở bên cạnh em một bước anh cũng không rời đi, anh đã không biết từ lúc nào anh yêu thương em nhiều đến mức gọi là quá nhiều nhiều luôn, hình bóng em luôn lắp đầy trong tâm trí anh nên nếu thiếu vắng bóng em có thể là anh sẽ không chịu nổi dù chỉ là 1 ngày. Anh sẽ mang đến cho em những gì điều tốt đẹp nhất, sự dịu dàng nhất cho em nên là cười nhiều lên em nhé, anh chỉ muốn thấy em lúc nào cũng cười tươi như vậy là anh đã thấy hạnh phúc lắm rồi. LỜI CUỐI nèeee, cảm ơn em vì đã bước vào cuộc đời anh và cũng cảm ơn em vì đã chọn yêu thương anh, anh mong mối tình này của chúng mình sẽ kéo dài cả triệu năm về sau, cùng nhau có những kỉ niệm đẹp, những tấm ảnh chụp chung cũng sẽ ngày càng nhiều hơn tràn đầy dung lượng điện thoại. Anh không muốn một phút giây nào xa em, anh cần em nhiều hơn những gì anh đã nói, những giây phút bên em anh sẽ trân trọng nó và đó là những kỉ niệm đẹp mà anh không muốn phải quên và cả em nữa. Anh yêu em rất rất rất rất rất là nhiềuuuuuuu lắm bà xã iu dấu của anhhhh oii. Đây là tất cả những gì anh muốn nói với em chắc chắn sẽ không bằng được lá thư mà em gửi tặng anh òi nhưng đây là toàn bộ những gì anh muốn nói và cần nói cho em biết. MÃI YÊU EM, CHỈ YÊU MỘT MÌNH EM THÔI ❤️";
+  const msg = document.getElementById("message");
 
-    function showMessage() {
-      if (typing) return;
-      typing = true;
-      msg.innerHTML = "";
-      msg.style.display = "block";
-      let i = 0;
-      const interval = setInterval(() => {
-        msg.innerHTML += text.charAt(i);
-        i++;
-        if (i === text.length) clearInterval(interval);
-      }, 55);
+  function showMessage() {
+    if (typing) return;
+    typing = true;
+    msg.innerHTML = "";
+    msg.style.display = "block";
+    let i = 0;
+    const interval = setInterval(() => {
+      msg.innerHTML += text.charAt(i);
+      i++;
+      if (i === text.length) clearInterval(interval);
+    }, 55);
+  }
+
+  const music = document.getElementById("bgMusic");
+  const musicBtn = document.getElementById("musicBtn");
+  const muteBtn = document.getElementById("muteBtn");
+  music.volume = 0.5;
+
+  function toggleMusic() {
+    if (music.paused) {
+      music.play();
+      musicBtn.innerText = "⏸️ Dừng nhạc";
+      musicBtn.classList.add("playing");
+    } else {
+      music.pause();
+      musicBtn.innerText = "▶️ Phát nhạc";
+      musicBtn.classList.remove("playing");
     }
+  }
 
-    const music = document.getElementById("bgMusic");
-    const musicBtn = document.getElementById("musicBtn");
-    const muteBtn = document.getElementById("muteBtn");
-    music.volume = 0.5;
-
-    function toggleMusic() {
-      if (music.paused) {
-        music.play();
-        musicBtn.innerText = "⏸️ Dừng nhạc";
-        musicBtn.classList.add("playing");
-      } else {
-        music.pause();
-        musicBtn.innerText = "▶️ Phát nhạc";
-        musicBtn.classList.remove("playing");
-      }
+  function toggleMute() {
+    music.muted = !music.muted;
+    if (music.muted) {
+      muteBtn.innerText = "🔇 Mở tiếng";
+      muteBtn.classList.add("muted");
+    } else {
+      muteBtn.innerText = "🔊 Tắt tiếng";
+      muteBtn.classList.remove("muted");
     }
+  }
 
-    function toggleMute() {
-      music.muted = !music.muted;
-      if (music.muted) {
-        muteBtn.innerText = "🔇 Mở tiếng";
-        muteBtn.classList.add("muted");
-      } else {
-        muteBtn.innerText = "🔊 Tắt tiếng";
-        muteBtn.classList.remove("muted");
-      }
-    }
+  // 🎵 Tự động phát nhạc khi load trang
+  window.addEventListener("load", () => {
+    music.play().then(() => {
+      musicBtn.innerText = "⏸️ Dừng nhạc";
+      musicBtn.classList.add("playing");
+    }).catch(() => {
+      // Nếu autoplay bị chặn → nghe click đầu tiên để phát nhạc
+      document.body.addEventListener("click", forcePlay, { once: true });
+    });
+  });
 
-    // Trái tim đỏ lấp lánh
-    function createHeart() {
-      if(document.querySelectorAll('.heart').length >= 50) return;
-      const heart = document.createElement('div');
-      heart.classList.add('heart');
-      const x = Math.random() * window.innerWidth;
-      const y = window.innerHeight - 20;
-      heart.style.left = x + 'px';
-      heart.style.top = y + 'px';
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 4000);
-    }
-    setInterval(createHeart, 300);
-  </script>
+  function forcePlay() {
+    music.play();
+    musicBtn.innerText = "⏸️ Dừng nhạc";
+    musicBtn.classList.add("playing");
+  }
+
+  // Trái tim đỏ lấp lánh
+  function createHeart() {
+    if (document.querySelectorAll('.heart').length >= 50) return;
+    const heart = document.createElement('div');
+    heart.classList.add('heart');
+    const x = Math.random() * window.innerWidth;
+    const y = window.innerHeight - 20;
+    heart.style.left = x + 'px';
+    heart.style.top = y + 'px';
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 4000);
+  }
+  setInterval(createHeart, 300);
+</script>
 </body>
 </html>
